Updated NPM Package.json

--- a/gart-vue-lazyload/package.json
+++ b/gart-vue-lazyload/package.json
@@ -24,6 +24,7 @@
     },
     "extends": [
       "plugin:vue/essential",
+      "eslint: recommended",
       "@vue/prettier"
     ],
     "rules": {},
