--- a/vue-history-mode-routing/package.json
+++ b/vue-history-mode-routing/package.json
@@ -18,7 +18,7 @@
     "@vue/cli-service": "^3.0.5",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.9.0",
-    "eslint-plugin-vue": "^5.0.0-0",
+    "eslint-plugin-vue": "^5.0.0-beta.4",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
