--- a/vuexapi/package.json
+++ b/vuexapi/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-axios": "^2.1.4",
