--- a/vue-notification/package.json
+++ b/vue-notification/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-axios": "^2.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
