--- a/vue-notification/package.json
+++ b/vue-notification/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "vue": "^2.5.17",
-    "vue-axios": "^2.1.4"
+    "vue-axios": "^2.1.4",
+    "vue-toasted": "^1.1.25"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
