--- a/vue-firebase/package.json
+++ b/vue-firebase/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.1.3",
     "firebase": "^5.5.9",
     "vue": "^2.5.17",
+    "vue-router": "^3.0.2",
     "vuefire": "^1.4.5"
   },
   "devDependencies": {
