--- a/vue-firebase/package.json
+++ b/vue-firebase/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "css-loader": "^1.0.1",
     "firebase": "^5.5.9",
+    "node-sass": "^4.10.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.2",
     "vuefire": "^1.4.5"
