--- a/cebu-news/package.json
+++ b/cebu-news/package.json
@@ -17,9 +17,12 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "css-loader": "^2.1.0",
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0"
   }
 }
